Create pink-button and build-text classes. Change from button-red to red-button

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,14 @@
   padding: .5rem 1rem;
 }
 
-.button-red {
+.pink-button {
+  background-color: pink;
+}
+
+.red-button {
   background-color: red;
+}
+
+.bold-text {
+  font-weight: bold;
 }
